--- a/pagina1.css
+++ b/pagina1.css
@@ -19,3 +19,98 @@ header{
     overflow: hidden;
 
 }
+
+header nav ul{
+    display: flex;
+    gap: 20px;
+}
+
+header nav ul li a{
+    text-decoration: none;
+    color: white;
+}
+
+header nav ul li a:hover{
+    color: dimgrey;
+    transition: 0.6s;
+}
+
+
+#section-2 {
+    padding: 200px;
+    background-image: url(img/ai-generated-8780351_1280.png);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+#section-2 div p{
+    font-size: 50px;
+    color: black;
+    font-weight: 300;
+    background-color: rgba(128, 128, 128, 0.315);
+    font-family: Arial, Helvetica, sans-serif;
+
+}
+
+#section-3{
+    padding: 100px;
+    background-color: #591159;
+
+}
+
+.div-ia{
+    width: 200px;
+    height: 300px;
+    background-color: #345911;
+}
+
+.div-ia{
+   display: flex;
+   justify-content: space-evenly;
+   gap: 35px;
+   margin-bottom: 30px;
+}
+.div-01 {
+    background-image: url(img/img1.jpg);
+    background-size: cover;
+    background-position: center;
+}
+
+.div-ia .div-02{
+    background-image: url(img/img2.jpg);
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    justify-content: space-evenly;
+    gap: 35px;
+}
+
+.div-ia .div-03{
+    background-image: url(img/img3.jpg);
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    justify-content: space-evenly;
+    gap: 35px;
+}
+
+.div-ia .div-04{
+    background-image: url(img/img4.jpg);
+    background-size: cover;
+    background-position: center;
+}
+
+.div-ia .div-05{
+    background-image: url(img/img5.jpg);
+    background-size: cover;
+    background-position: center;
+}
+
+.div-ia .div-06{
+    background-image: url(img/img6.jpg);
+    background-size: cover;
+    background-position: center;
+}
