--- a/pagina1.css
+++ b/pagina1.css
@@ -1,16 +1,16 @@
-*{        
+* {
     margin: 0;
     vertical-align: baseline;
     list-style: none;
     font-family: Segoe UI, Roboto, Helvetica, Arial, sans-serif;
 }
 
-html{
+html {
     width: 100%;
     height: 100vh;
 }
 
-header{
+header {
     display: flex;
     align-items: center;
     justify-content: space-evenly;
@@ -20,17 +20,17 @@ header{
 
 }
 
-header nav ul{
+header nav ul {
     display: flex;
     gap: 20px;
 }
 
-header nav ul li a{
+header nav ul li a {
     text-decoration: none;
     color: white;
 }
 
-header nav ul li a:hover{
+header nav ul li a:hover {
     color: dimgrey;
     transition: 0.6s;
 }
@@ -46,7 +46,7 @@ header nav ul li a:hover{
     justify-content: space-evenly;
 }
 
-#section-2 div p{
+#section-2 div p {
     font-size: 50px;
     color: black;
     font-weight: 300;
@@ -55,62 +55,65 @@ header nav ul li a:hover{
 
 }
 
-#section-3{
+#section-3 {
     padding: 100px;
     background-color: #591159;
+    display: flex;
+    gap: 30px;
+    align-items: center;
 
 }
 
-.div-ia{
+.div-ia {
     width: 200px;
     height: 300px;
-    background-color: #345911;
+    
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: 35px;
+    margin-bottom: 30px;
 }
 
-.div-ia{
-   display: flex;
-   justify-content: space-evenly;
-   gap: 35px;
-   margin-bottom: 30px;
-}
-.div-01 {
+.div-ia, .div-01 {
     background-image: url(img/img1.jpg);
     background-size: cover;
     background-position: center;
+    background-color: #345911;
+    padding: 30px;
 }
 
-.div-ia .div-02{
+.div-ia, .div-02 {
     background-image: url(img/img2.jpg);
     background-size: cover;
     background-position: center;
-    display: flex;
-    justify-content: space-evenly;
-    gap: 35px;
+    background-color: #345911;
+    padding: 30px;
+    
 }
 
-.div-ia .div-03{
+.div-ia, .div-03 {
     background-image: url(img/img3.jpg);
     background-size: cover;
     background-position: center;
-    display: flex;
-    justify-content: space-evenly;
-    gap: 35px;
+    background-color: #345911;
+    padding: 30px;
 }
 
-.div-ia .div-04{
+.div-ia, .div-04 {
     background-image: url(img/img4.jpg);
     background-size: cover;
     background-position: center;
 }
 
-.div-ia .div-05{
-    background-image: url(img/img5.jpg);
+.div-ia, .div-05 {
+    
     background-size: cover;
     background-position: center;
 }
 
-.div-ia .div-06{
-    background-image: url(img/img6.jpg);
+.div-ia, .div-06 {
+    
     background-size: cover;
     background-position: center;
 }
